# triton

./: .gitignore  Cargo.toml  README.md  index.html
browser/: Cargo.toml
browser/src/: lib.rs
browser/www/: index.html
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: layout.rs  lib.rs  main.rs
core/src/sequence_diagram/: mod.rs  parser.rs  render.rs
src/: layout.rs  main.rs
src/sequence_diagram/: parser.rs
